pods/alpine.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine-aliyun
  namespace: default
spec:
  containers:
  - name: alpine-aliyun
    image: yuweijun/alpine-aliyun:latest
