pods/curl-with-ambassador.yaml
# https://kubernetes.io/docs/reference/access-authn-authz/rbac/
# kubectl apply -f cluster-admin-role-rbac.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl-with-ambassador
spec:
  containers:
    - name: main
      image: tutum/curl
      command: ["sleep", "9999999"]
    - name: ambassador
      image: luksa/kubectl-proxy:1.6.2
