pods/echoserver.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-minikube-service
spec:
  selector:
    app: hello-mibikube
  ports:
  - protocol: "TCP"
    port: 7000
    targetPort: 5000
  type: LoadBalancer


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-minikube
spec:
  selector:
    matchLabels:
      app: hello-minikube
  replicas: 2
  template:
    metadata:
      labels:
        app: hello-minikube
    spec:
      containers:
      - name: hello-minikube
        image: yuweijun/k8s.gcr.io.echoserver:1.10
        ports:
        - containerPort: 5000
