pods/kubia-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-headless
spec:
  clusterIP: Nome
  selector:
    app: kubia
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 8080
