pods/kubia-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-service
spec:
  selector:
    app: kubia
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 8080
